--- a/app/globals.css
+++ b/app/globals.css
@@ -5,11 +5,22 @@
 
 :root {
 
-  /**Div Colors*/
-  --divColorLightPink: #e7bcda;
+  /*Client-provided Color Themes*/
+  --light-gray-sand: #edede9;
+  --dark-gray-sand: #d6ccc2;
+  --light-tan-sand: #f5ebe0;
+  --gray-tan-sand: #e3d5ca;
+  --dark-tan-sand: #d5bdaf;
+  --darker-tan-sand: #856857;
+
+
   --radius: 0.625rem;
+
+  /*Next.js provided colors*/
   --background: oklch(1 0 0);
   --foreground: oklch(0.13 0.028 261.692);
+
+  /*Shadcn provided colors*/
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.13 0.028 261.692);
   --popover: oklch(1 0 0);
@@ -42,13 +53,21 @@
 }
 
 @theme inline {
+  /*Client Color Themes*/
+  --color-light-gray-sand: var(--light-gray-sand);
+  --color-dark-gray-sand: var(--dark-gray-sand);
+  --color-light-tan-sand: var(--light-tan-sand);
+  --color-gray-tan-sand: var(--gray-tan-sand);
+  --color-dark-tan-sand: var(--dark-tan-sand);
+  --color-darker-tan-sand: var(--darker-tan-sand);
+
+  /*Next.js provided colors*/
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-  --color-light-pink: var(--divColorLightPink);
-
+  /*Shadcn provided colors*/
   --color-sidebar-ring: var(--sidebar-ring);
 
   --color-sidebar-border: var(--sidebar-border);
